--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
   box-sizing: border-box;
   font-family: 'Poppins', sans-serif;
 }
+/* Header-Section*/
 #header {
   height: 100vh;
   background-image: url(Assets/banner.avif);
   background-size: cover;
   background-position: center;
+  margin-bottom: 50px;
 } 
 .navbar {
   height: 98px;
@@ -53,9 +55,8 @@
   padding-right: 20px;
 }
 .navlinks-right li {
-margin: 0 1.8rem 0 0;
+  margin: 0 1.8rem 0 0;
 }
-
 .navlinks-right input {
   height: 32px;
   width: 250px;
@@ -66,6 +67,7 @@ margin: 0 1.8rem 0 0;
   border: 2.5px solid #49111C;
   border-radius: 20px;
   background: transparent;
+  color: #49111C;
 }
 ::placeholder {
   font-size: 0.9rem;
@@ -82,7 +84,7 @@ margin: 0 1.8rem 0 0;
   filter : grayscale(0);
   transform: scale(1.1,1.2);
 }
-/* Banner */
+/* Banner-Section */
 .banner {
   width: 100%;
   height: 55vh;
@@ -109,8 +111,211 @@ margin: 0 1.8rem 0 0;
   margin: 2rem 0 0;
   font-size: 1rem;
   transition: all 0.2s;
+  cursor: pointer;
 }
 .small-container button:hover {
   color: darksalmon;
   background-color: #49111C;
+  box-shadow: 0 0 10px 1px #827e7e;
+}
+.heading h1 {
+  text-align: center;
+  color: #49111C;
+  font-family: popping;
+  font-size: 6vmin;
+  cursor: pointer;
+  text-decoration: underline;
+}
+/* category-section */
+#category-sec {
+  display: flex;
+  justify-content: space-around;
+  align-items: start;
+  padding: 40px 0 0;
+}
+.aside-content {
+  width: 20%;
+}
+aside {
+  padding: 0 0 10px 18px ;
+  border: 1px solid rgb(192, 155, 209);
+  background-color: #AF3B6E;
+  color: white;
+}
+aside h1 {
+  font-size: 2.3vmin;
+  padding-bottom: 5px;
+}
+aside ul {
+  list-style-type: none;
+}
+aside ul li {
+  font-size: 0.8rem;
+  padding-bottom: 6px;
+}
+aside ul select {
+  outline: none;
+  display: block;
+  background-color: rgb(240, 234, 234);
+  border-radius: 3px;
+}
+.c-img-main {
+  width: 75%;
+  padding: 40px 40px ;
+  background-image: url(Assets/banner2.avif);
+  background-size: cover;
+  background-position: right;
+}
+.img-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.c-box1 {
+  height: 220px;
+  width: 220px;
+  border: 1px solid #af596a;
+  cursor: pointer;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.5s;
+  margin-bottom: 1rem;
+  background-color: whitesmoke;
+}
+.c-box1:hover {
+  transform: scale(1.1,1.1);
+}
+.c-img-box1 {
+  width: 198px;
+  height: 150px;
+  position: relative;
+}
+.c-img-box1 img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 6px;
+}
+.offer {
+  position: absolute;
+  top : 0;
+  right: 0;
+  color: beige;
+  padding: 1px 2px;
+  background-color: #af596a;
+  font-size: 12px;
+}
+.c-box1 p {
+  color:  #af596a;
+  text-align: center;
+  font-size: 13px;
+  margin-top: 0.7rem;
+  line-height: 15px;
+  font-weight: bold;
+  font-family: popping;
+  transition: all 0.3s;
+}
+.c-box1 p:hover {
+  text-decoration: underline;
+} 
+.next {
+  margin-left: 45%;
+}
+.next a {
+  text-decoration: none;
+  color: lightcoral;
+  transition: all 0.3s;
+  margin-right: 0.8rem;
+}
+.next a:hover {
+  text-decoration: underline;
+  color: rgb(13, 13, 218);
+}
+/* footer-Section */
+.footer {
+  background-color: #49111C;
+  height: 31vh;
+}
+.footer-sec {
+  margin-top: 2rem;
+  padding: 2rem;
+  display: flex;
+  align-items: start;
+}
+.first-footer {
+  width: 30%;
+}
+.first-footer p {
+  font-size: 0.9rem;
+  font-weight: bold;
+  color: #777;
+}
+.first-footer small {
+  font-size: 0.7rem;
+  color: #777;
+}
+.first-footer .app-logo {
+  width: 175px;
+  margin-top: 2.5rem;
+}
+.app-logo img {
+  width: 75px;
+  margin-right: 10px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+.app-logo img:hover {
+  transform: scale(1.1,1.1);
+}
+.second-footer {
+  flex: 1;
+}
+.site-logo {
+  width: 130px;
+  margin: 0 auto;
+}
+.site-logo img {
+  width: 100%;
+  transition: all 0.4s;
+  cursor: pointer;
+}
+.site-logo img:hover {
+  transform: scale(1.1,1.1);
+}
+.second-footer p {
+  color: #555;
+  font-size: 0.7rem;
+  text-align: center;
+}
+.third-footer,.fourth-footer {
+  flex-basis: 12%;
+}
+.third-footer ul,.fourth-footer ul {
+  color: white;
+  list-style-type: none;
+}
+.third-footer ul li ,.fourth-footer ul li {
+  margin-top: 0.4rem;
+  padding-left: 8px;
+}
+.third-footer li a ,.fourth-footer li a {
+  text-decoration: none;
+  color: #555;
+  font-size: 0.7rem;
+  transition: all 0.4s;
+}
+.third-footer li a:hover ,.fourth-footer li a:hover {
+  text-decoration: underline;
+}
+.footer hr {
+  border-color: #555;
+}
+.footer .copy {
+  color: #555;
+  text-align: center;
+  font-size: 0.7rem;
+  padding: 5px 0;
 }
