--- a/phone.css
+++ b/phone.css
@@ -99,8 +99,11 @@ aside ul select {
   margin-top: 0.4rem;
 }
 .next {
-  margin-left: 40%;
-  font-size: 0.8rem;
+  margin-left: 30%;
+}
+.next a {
+  color: beige;
+  margin-right: 0.9rem;
 }
 /* Footer-Section */
 .footer {
