--- a/style.css
+++ b/style.css
@@ -12,6 +12,13 @@
   background-position: center;
   margin-bottom: 50px;
 } 
+#header2 {
+  height: 70vh;
+  background-image: url(Assets/cimgbox6.jpeg);
+   background-size: cover; 
+  background-position: start;
+  margin-bottom: 50px;
+}
 .navbar {
   height: 98px;
   padding: 20px 0  0 20px;
@@ -92,15 +99,25 @@
   justify-content: start;
   align-items: center;
 }
+.b2 {
+ width: 100%;
+ height: 55vh;
+ display: flex;
+ justify-content: center;
+ align-items: center;
+}
 .small-container {
   display: flex;
   flex-direction: column;
   padding: 2rem;
 }
-.small-container h1{
+.small-container h1, .sc2 h1{
  font-size: 6vmin;
  font-family: popping;
  color: #49111C;
+}
+.sc2 h1 {
+  color: white;
 }
 .small-container button {
   background-color: transparent;
@@ -251,7 +268,7 @@ aside ul select {
 .first-footer p {
   font-size: 0.9rem;
   font-weight: bold;
-  color: #777;
+  color: grey;
 }
 .first-footer small {
   font-size: 0.7rem;
@@ -294,7 +311,7 @@ aside ul select {
   flex-basis: 12%;
 }
 .third-footer ul,.fourth-footer ul {
-  color: white;
+  color: grey;
   list-style-type: none;
 }
 .third-footer ul li ,.fourth-footer ul li {
