--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@
   font-weight: bolder;
   color: white;
 }
-.cat-right a:hover {
+.cat-left a:hover {
   border-bottom: 2px solid beige;
 }
 .heading-category {
